--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
     "next": "16.1.1",
     "react": "19.2.3",
+    "react-big-calendar": "^1.19.4",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-big-calendar": "^1.16.3",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
