--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.24.7",
     "lucide-react": "^0.562.0",
+    "motion": "^12.25.0",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
